# event_driven_chat

./: readme.md
analysis_chat/: mise.toml  pyproject.toml
analysis_chat/src/: events.py
analysis_chat/src/analysis/: main.py
analysis_chat/src/chat_procesor/: main.py  manager.py
analysis_chat/src/chat_processor/: main.py  manager.py
analysis_chat/src/config/: logging.py  redpanda.py
analysis_chat/src/consume/: main.py  redpanda_consumer.py
analysis_chat/src/event_manager/: main.py  redpanda_consumer.py  redpanda_producer.py
analysis_chat/src/produce/: main.py
analysis_chat/src/pub_sub/: channels.py  nats_publisher.py  nats_subscriber.py
app_chat/: bun.lockb  package-lock.json  package.json
app_chat/src/: App.tsx  Chat.tsx
app_chat/src/components/: ModeToggle.tsx
app_chat/src/stores/: chat.store.ts
main_chat/: README.md  go.mod  go.sum  main.go
main_chat/cmd/api/: main.go
main_chat/cmd/persistence/: main.go
main_chat/internal/chat/: chat.go  chat_consumer.go  chat_handler.go  chat_producer.go  chat_repository.go  chat_service.go  redpanda_chat_consumer.go  redpanda_chat_producer.go  scylla_chat_repository.go
main_chat/internal/config/: env.go
main_chat/internal/user/: redis_user_repository.go  user.go  user_handler.go  user_repository.go  user_service.go
socket_chat/: index.ts  package-lock.json  package.json  types.ts
socket_chat/events/: consumer.ts
socket_chat/server/: websocket.ts
